--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -21,7 +21,7 @@ jobs:
         run: poetry install --only main
       - name: Run Bandit
         run: |
-          poetry run bandit -r hashcsp -o bandit.txt -f txt
+          poetry run bandit -r -x hashcsp/tests hashcsp -o bandit.txt -f txt
       - name: Upload Bandit report
         uses: actions/upload-artifact@v4
         with:
