--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,19 +9,20 @@ license = {file = "LICENSE"}
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "typer (>=0.15.2,<0.16.0)",
+    "typer (>=0.15.4,<0.16.0)",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
     "rich (>=14.0.0,<15.0.0)",
     "playwright (>=1.51.0,<2.0.0)",
     "pydantic (>=2.11.3,<3.0.0)",
-    "structlog (>=24.1.0,<25.0.0)"
-    # "python-json-logger (>=2.0.7,<3.0.0)"
+    "structlog (>=24.1.0,<25.0.0)",
+    "tornado (>=6.5,<7.0)",
+    "bandit (>=1.8.3,<2.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.3.2"
+pytest = "^8.3.5"
 ruff = "^0.6.9"
-black = "^24.8.0"
+black = "^25.1.0"
 isort = "^5.13.2"
 mypy = "^1.11.2"
 types-requests = "^2.32.0.20250328"
@@ -37,6 +38,7 @@ pytest-twisted = "^1.14.3"
 twisted = "^24.11.0"
 bandit = "^1.8.3"
 sphinx = "^8.2.3"
+pre-commit = "^4.2.0"
 
 [tool.black]
 line-length = 88
